--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,25 @@
+  /********************
+        global styling 
+  ********************/
 * {
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
   font-family: 'Oswald', sans-serif;
+}
+
+header {
+  text-align: center;
+}
+
+h1 {
+  font-size: 55px;
+  padding-top: 20px;
+}
+
+body,
+li:nth-child(odd) {
+  background-color: rgb(214, 200, 142);
 }
 
 .split {
@@ -21,16 +38,26 @@
   padding: 2em;
 }
 
+input::placeholder{
+  color: rgb(204, 196, 91);
+}
+
 .p-1 {
   margin: 4px;
   padding: 10px;
 }
 
+.Refresh-page {
+  margin: 0 auto;
+}
+
 .b-1 {
-  margin: 0% 20px;
+  /* margin: 0% 20px; */
   padding: 7px;
   box-shadow: 3px 3px 3px 1px rgb(36, 35, 35);
   border: 1px solid black;
+  background-color: rgb(148, 132, 89);
+  color: whitesmoke;
 }
 
 .wd {
@@ -54,7 +81,7 @@ li {
 }
 
 li:nth-child(odd) {
-  background-color: rgb(143, 132, 132);
+  background-color: rgb(148, 132, 89);
 }
 
 li:nth-child(even) {
@@ -64,4 +91,18 @@ li:nth-child(even) {
 ul {
   list-style: none;
   padding: 0%;
+}
+
+@media screen and (max-width: 600px) {
+  .split {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .wd {
+    width: 25%;
+    margin-left: 70%;
+  }
+
 }
