--- a/src/style.css
+++ b/src/style.css
@@ -79,11 +79,11 @@ li {
   color: black;
 }
 
-.table:nth-child(odd) {
+li:nth-child(odd) {
   background-color: rgb(148, 132, 89);
 }
 
-.table:nth-child(even) {
+li:nth-child(even) {
   background-color: #fff;
 }
 
